Add build/version footer info to UI layout

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -25,6 +25,7 @@
     </nav>
     <div class="sidebar-footer">
       <p class="sidebar-note">Internal use only</p>
+      <p class="sidebar-note">ipocket v{{ build_info.version }} ({{ build_info.commit }}) • built {{ build_info.build_time }}</p>
     </div>
   </aside>
   <div class="app-main">
