--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -27,7 +27,7 @@
       <div class="sidebar-account">
         <p class="sidebar-section-title">Account</p>
         <form method="post" action="/ui/logout">
-          <button type="submit" class="btn btn-outline btn-block">Logout</button>
+          <button type="submit" class="nav-link sidebar-logout-button">Logout</button>
         </form>
       </div>
       <p class="sidebar-note">Internal use only</p>
