Fix sidebar logout button styling consistency

--- a/app/static/app.css
+++ b/app/static/app.css
@@ -137,9 +137,12 @@ p {
   width: 100%;
   border: 0;
   background: transparent;
+  appearance: none;
+  -webkit-appearance: none;
   cursor: pointer;
   font: inherit;
   text-align: left;
+  color: inherit;
 }
 
 .sidebar-section-title {
