--- a/app/templates/projects.html
+++ b/app/templates/projects.html
@@ -41,7 +41,7 @@
   </form>
 </section>
 
-<section class="card table-card">
+<section class="card table-card projects-existing-card">
   <div class="card-header">
     <div>
       <h2>Existing projects</h2>
