--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -22,6 +22,7 @@
       <a class="nav-link{% if active_nav == 'needs-assignment' %} nav-link-active{% endif %}" href="/ui/ip-assets/needs-assignment">Needs Assignment</a>
       <a class="nav-link{% if active_nav == 'projects' %} nav-link-active{% endif %}" href="/ui/projects">Projects</a>
       <a class="nav-link{% if active_nav == 'owners' %} nav-link-active{% endif %}" href="/ui/owners">Owners</a>
+      <a class="nav-link{% if active_nav == 'hosts' %} nav-link-active{% endif %}" href="/ui/hosts">Hosts</a>
     </nav>
     <div class="sidebar-footer">
       <div class="sidebar-account">
