--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -21,6 +21,7 @@
       <a class="nav-link{% if active_nav == 'ip-assets' %} nav-link-active{% endif %}" href="/ui/ip-assets">IP Assets</a>
       <a class="nav-link{% if active_nav == 'needs-assignment' %} nav-link-active{% endif %}" href="/ui/ip-assets/needs-assignment">Needs Assignment</a>
       <a class="nav-link{% if active_nav == 'projects' %} nav-link-active{% endif %}" href="/ui/projects">Projects</a>
+      <a class="nav-link{% if active_nav == 'vendors' %} nav-link-active{% endif %}" href="/ui/vendors">Vendors</a>
       <a class="nav-link{% if active_nav == 'hosts' %} nav-link-active{% endif %}" href="/ui/hosts">Hosts</a>
     </nav>
     <div class="sidebar-footer">
