--- a/app/templates/hosts.html
+++ b/app/templates/hosts.html
@@ -29,6 +29,7 @@
           <td>{{ host.ip_count }}</td>
           <td>
             <button class="btn btn-secondary" type="button" onclick="toggleHostEdit({{ host.id }})">Edit</button>
+            <a class="btn btn-outline" href="/ui/hosts/{{ host.id }}/delete">Delete</a>
           </td>
         </tr>
         <tr id="host-edit-row-{{ host.id }}" style="display: none;">
